--- a/index.html
+++ b/index.html
@@ -25,9 +25,27 @@
     <p> <text class= "white-text-color"> Lynn Odero  </p> </text>
     <p> Github Username url
 
-  <a href="https://github.com/LynnOdero"> https://github.com/LynnOdero </a> 
+  <a href="https://github.com/LynnOdero"> https://github.com/LynnOdero </a>
 </p>
+<p> Level 2 test for </p>
+<p> Java </p>
 
+      </div>
+      <div class="col-md-8">
+        <h2>Let's play!</h2>
+        <p> Rules: </p>
+        <br>
+        <h4> Ping Pong will count upto your number from 1 with the following exceptions: </h4>
+        <ol>
+          <li>Numbers Divisible by 3 become "PING"</li>
+          <li> Number divisible by 5 become "PONG"</li>
+          <li>Number divisible by 3 and 5 become "PING-PONG"</li>
+        </ol>
+
+<form>
+<b> <p>Enter your number here: <input type="text" name="Enter your number here" value=""> </b>
+<input type="text" name="PING PONG!" value="PING PONG">
+</form><
       </div>
 
     </div>
