more changes made

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="js/jquery-3.3.1.js">
 <link rel="stylesheet" href="js/scripts.js">
+<link rel="stylesheet" href="https://fonts.google.com/specimen/Frank+Ruhl+Libre/">
 
   <head>
     <title> Ping-Pong</title>
@@ -19,28 +20,29 @@
   <div class="well">
 
     <div class="row">
-      <div class="col-md-4">
-        About Ping-Pong
-  <p>  <text class="yellow-text-color"> Created by </text> </p>
+      <div class="col-md-4 ppp">
+      <h1>  <b>About Ping-Pong</b> </h1>
+  <h2><p>  <text class="yellow-text-color"> Created by </text> </p>
     <p> <text class= "white-text-color"> Lynn Odero  </p> </text>
     <p> Github Username url
 
   <a href="https://github.com/LynnOdero"> https://github.com/LynnOdero </a>
 </p>
 <p> Level 2 test for </p>
-<p> Java </p>
+<p> Java </p> </h2>
 
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8 mmm">
         <h2>Let's play!</h2>
-        <p> Rules: </p>
-        <br>
-        <h4> Ping Pong will count upto your number from 1 with the following exceptions: </h4>
+        <p> <B> Rules: </p>
+        <br> </B>
+        <h4> Ping Pong will count upto your number from 1 with the following exceptions:
         <ol>
           <li>Numbers Divisible by 3 become "PING"</li>
           <li> Number divisible by 5 become "PONG"</li>
           <li>Number divisible by 3 and 5 become "PING-PONG"</li>
         </ol>
+        </h4>
 
 <form>
 <b> <p>Enter your number here: <input type="text" name="Enter your number here" value=""> </b>
