--- a/index.html
+++ b/index.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://fonts.google.com/specimen/Frank+Ruhl+Libre/">
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="js/jquery-3.3.1.js">
-<link rel="stylesheet" href="js/scripts.js">
-<link rel="stylesheet" href="https://fonts.google.com/specimen/Frank+Ruhl+Libre/">
-
+<script src="js/jquery-3.3.1.js"> </script>
+<script src="js/businesslogic.js"> </script>
   <head>
     <title> Ping-Pong</title>
   </head>
+
   <body>
-
-<div class="container">
-<div class="jumbotron">
-  <p> <h1>Ping Pong </h1></p>
-  <br>
-  <br>
-</div>
-  <div class="well">
-
-    <div class="row">
-      <div class="col-md-4 ppp">
-      <h1>  <b>About Ping-Pong</b> </h1>
-  <h2><p>  <text class="yellow-text-color"> Created by </text> </p>
-    <p> <text class= "white-text-color"> Lynn Odero  </p> </text>
-    <p> Github Username url
-
-  <a href="https://github.com/LynnOdero"> https://github.com/LynnOdero </a>
-</p>
-<p> Level 2 test for </p>
-<p> Java </p> </h2>
-
-      </div>
-      <div class="col-md-8 mmm">
-        <h2>Let's play!</h2>
-        <p> <B> Rules: </p>
-        <br> </B>
-        <h4> Ping Pong will count upto your number from 1 with the following exceptions:
-        <ol>
-          <li>Numbers Divisible by 3 become "PING"</li>
-          <li> Number divisible by 5 become "PONG"</li>
-          <li>Number divisible by 3 and 5 become "PING-PONG"</li>
-        </ol>
-        </h4>
-
-<form>
-<b> <p>Enter your number here: <input type="text" name="Enter your number here" value=""> </b>
-<input type="text" name="PING PONG!" value="PING PONG">
-</form><
-      </div>
+    <div class="container">
+        <div class="jumbotron">
+        </div>
 
     </div>
 
-  </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 ppp">
+              <p>  <a href="PING-PONG">About PING-PONG</a></p>
+                <p> <a href="Created by">Created by</a> </p>
+              <P> Lynn Odero </p>
+              <p>  <a href="Github Username url"> Github Username url: <a href="https://github.com/LynnOdero"> https://github.com/LynnOdero </a></a> </p>
+              <p>  <a href="PING-PONG">Level 2 test for </a></p>
+              <p> Java </p>
+            </div>
+            <div class="col-md-8">
+              <h3> <b>Let's play!</b></h3>
+              <p> <b> Rules: </b></p>
+              <h4>Ping Pong will count upto your number from 1 with the following exceptions:
+              <ol>
+                <li>Numbers Divisible by 3 become "PING"</li>
+                <li> Number divisible by 5 become "PONG"</li>
+                <li>Number divisible by 3 and 5 become "PING-PONG"</li>
+              </ol>
+              </h4>
+                <form id="ping-pong-form">
+                <div class="form-group">
+                  <label class="control-label"> Enter your number here:</label>
+                  <input class="form-control" type="number" id="ping-pong-num" />
+                </div>
+                <div class="form-group">
+                     <input type="submit" value="Ping Pong!" class="btn">
+                </div>
+                </form>
+                <div  id="results-div">
+                </div>
+              </div>
 
+            </div>
 
+        </div>
 
-</div>
+ </body>
 
-  </body>
 </html>
