--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
             </div>
 
         </div>
+        <div class="footer">
+
+        <footer> lets play ping- pong!! Have fun yaaaaaaaaay!!
+<img src="img/Ping paddles.jpeg" alt="">
+</p>
+        </footer>
+      </div>
 
  </body>
 
