more changes done in css

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 ppp">
-              <p>  <a href="PING-PONG">About PING-PONG</a></p>
+              <p>  About PING-PONG </p>
                 <p> <a href="Created by">Created by</a> </p>
               <P> Lynn Odero </p>
-              <p>  <a href="Github Username url"> Github Username url: <a href="https://github.com/LynnOdero"> https://github.com/LynnOdero </a></a> </p>
+              <p> Github Username url: <a href="https://github.com/LynnOdero"> https://github.com/LynnOdero </a></a> </p>
               <p>  <a href="PING-PONG">Level 2 test for </a></p>
               <p> Java </p>
             </div>
