--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://fonts.google.com/specimen/Frank+Ruhl+Libre/">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Original+Surfer" rel="stylesheet">
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jquery-3.3.1.js"> </script>
